fix: table style in dark mode

--- a/static/css/dark.css
+++ b/static/css/dark.css
@@ -77,4 +77,16 @@
   pre {
     background-color: #222;
   }
+
+  table {
+    border: 1px solid #888;
+  }
+  td, th {
+    border: 1px solid #888;
+  }
+
+  tbody tr:nth-child(odd) td,
+  tbody tr:nth-child(odd) th {
+    background-color: #282828;
+  }
 }
